# Image-Processor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp  readme.md  unit_tests.cpp  utils.h
image_processor/filters/: crop.cpp  crop.h  edge.cpp  edge.h  filters.cpp  filters.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  photo_effect_transfer.cpp  photo_effect_transfer.h  sharp.cpp  sharp.h
image_processor/image/: color.cpp  color.h  image.cpp  image.h
image_processor/parser/: parser.cpp  parser.h
image_processor/reading_and_writing/: reader.cpp  reader.h  writer.cpp  writer.h
